<resources>
    <string name="app_name">Bibliothèque</string>
    <string name="nb_livres">Nombre de livres dans la bibliothèque : </string>
    <string name="tri">Tri par</string>
    <string name="addb">Ajouter un livre</string>
    <string name="btn_id">ID</string>
    <string name="btn_isbn">Isbn</string>
    <string name="btn_titre">Titre</string>
    <string name="btn_auteur">Auteur</string>
    <string name="btn_test">Tester</string>
    <string name="add_book">Ajouter</string>
    <string name="edit_book">Modifier</string>
    <string name="title_activity_edit_book">EditBookActivity</string>
    <string name="show_browser">Voir plus de détails</string>
    <string name="supprimer">Supprimer</string>
    <string name="ajouter">Ajouter</string>
    <string name="modifier">Modifier</string>
    <string name="scanner">Scan</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="quitter">Quitter</string>
</resources>
